// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.commit.uses.sh given: [case1] set --quant N --push block when: [t0] setting 3 uses with push blocked then: outputs gnarly with granted count 1`] = `
"🐢 gnarly! thanks human!

🐚 git.commit.uses set
   ├─ granted: 3
   ├─ push: blocked
   └─ stage: blocked
"
`;

exports[`git.commit.uses.sh given: [case2] set --quant N --push allow when: [t0] setting 1 use with push allowed then: outputs radical 1`] = `
"🐢 radical! let's ride!

🐚 git.commit.uses set
   ├─ granted: 1
   ├─ push: allowed
   └─ stage: blocked
"
`;

exports[`git.commit.uses.sh given: [case3] set --quant 0 (revoke) when: [t0] revoking all uses then: outputs groovy break time with tip 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses set
   ├─ revoked
   └─ [2mtip: 'rhx git.commit.uses del' does the same[0m
"
`;

exports[`git.commit.uses.sh given: [case3b] set --quant 0 --push allow (push-only mode) when: [t0] push-only access granted then: outputs push only mode without tip 1`] = `
"🐢 sweet, let it ride

🐚 git.commit.uses set
   ├─ commits: 0
   ├─ push: allowed
   └─ stage: blocked
"
`;

exports[`git.commit.uses.sh given: [case3c] set --quant 0 without --push (defaults to block) when: [t0] revoke without explicit push flag then: defaults to block and shows revoked with tip 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses set
   ├─ revoked
   └─ [2mtip: 'rhx git.commit.uses del' does the same[0m
"
`;

exports[`git.commit.uses.sh given: [case3d] del command (revoke shortcut) when: [t0] del with quota present then: shows revoked without tip 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses del
   └─ revoked
"
`;

exports[`git.commit.uses.sh given: [case3d] del command (revoke shortcut) when: [t1] del without quota (idempotent) then: succeeds and shows revoked 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses del
   └─ revoked
"
`;

exports[`git.commit.uses.sh given: [case5] get shows remaining when: [t0] state exists with 2 uses then: outputs lets check the meter with remaining 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ meter
      ├─ left: 2
      ├─ push: allowed
      └─ stage: blocked
"
`;

exports[`git.commit.uses.sh given: [case6] get with 0 uses and push allow (push-only mode) when: [t0] state exists with 0 uses and push allow then: shows push allowed for push-only use case 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ meter
      ├─ left: 0
      ├─ push: allowed
      └─ stage: blocked
"
`;

exports[`git.commit.uses.sh given: [case7] get when no state file when: [t0] no .meter/git.commit.uses.jsonc exists then: shows no quota set 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ no quota set

ask your human to grant:
  $ git.commit.uses set --quant N --push allow|block
"
`;

exports[`git.commit.uses.sh given: [case8] block --global when: [t0] no global blocker yet then: creates global blocker file 1`] = `
"🐢 groovy, bond fire time

🐚 git.commit.uses block --global
   └─ commits blocked globally
"
`;

exports[`git.commit.uses.sh given: [case9] allow --global when: [t0] global blocker is active then: removes global blocker file 1`] = `
"🐢 shell yeah, back in the water!

🐚 git.commit.uses allow --global
   └─ commits resumed globally
"
`;

exports[`git.commit.uses.sh given: [case10] get --global when: [t0] global blocker is active then: shows blocked 1`] = `
"🐢 lets check the global meter...

🐚 git.commit.uses get --global
   └─ global: blocked
"
`;

exports[`git.commit.uses.sh given: [case10] get --global when: [t1] no global blocker then: shows not blocked 1`] = `
"🐢 lets check the global meter...

🐚 git.commit.uses get --global
   └─ global: not blocked
"
`;

exports[`git.commit.uses.sh given: [case11] block (local) when: [t0] quota present then: sets quota to 0 (alias for del) 1`] = `
"🐢 groovy, break time

🐚 git.commit.uses del
   └─ revoked
"
`;

exports[`git.commit.uses.sh given: [case12] allow (local) when: [t0] no quota present then: grants unlimited quota with push allowed 1`] = `
"🐢 radical! let's ride!

🐚 git.commit.uses set
   ├─ granted: unlimited
   ├─ push: allowed
   └─ stage: allowed
"
`;

exports[`git.commit.uses.sh given: [case14] set --stage allow when: [t0] stage permission granted explicitly then: state shows stage: allow 1`] = `
"🐢 radical! let's ride!

🐚 git.commit.uses set
   ├─ granted: 5
   ├─ push: allowed
   └─ stage: allowed
"
`;

exports[`git.commit.uses.sh given: [case15] set --stage block when: [t0] stage permission blocked explicitly then: state shows stage: block 1`] = `
"🐢 radical! let's ride!

🐚 git.commit.uses set
   ├─ granted: 5
   ├─ push: allowed
   └─ stage: blocked
"
`;

exports[`git.commit.uses.sh given: [case18] get with stage permission when: [t0] state has stage: allow then: get displays stage: allowed 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ meter
      ├─ left: 3
      ├─ push: allowed
      └─ stage: allowed
"
`;

exports[`git.commit.uses.sh given: [case19] get shows local + global state when: [t0] local quota present and global blocked then: shows local meter and global blocked 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   └─ meter
      ├─ left: 3
      ├─ push: allowed
      ├─ stage: blocked
      └─ global: blocked
"
`;

exports[`git.commit.uses.sh given: [case19] get shows local + global state when: [t2] no local quota and global blocked then: shows no quota set and global blocked 1`] = `
"🐢 lets check the meter...

🐚 git.commit.uses
   ├─ no quota set
   └─ global: blocked

ask your human to grant:
  $ git.commit.uses set --quant N --push allow|block
"
`;
